--- a/app/src/main/res/layout/activity_main_dois.xml
+++ b/app/src/main/res/layout/activity_main_dois.xml
@@ -11,21 +11,52 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="90dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:src="@drawable/tangedco" />
 
     <EditText
+        android:id="@+id/edtLoginUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20sp"
+        android:layout_margin="30sp"
         android:hint="Usuário"
+        android:inputType="textPersonName"
         android:drawableEnd="@drawable/user"
-
         android:textColorHint="#fff"
+        android:padding="20sp"/>
 
-        android:padding="10sp"/>
+    <EditText
+        android:id="@+id/edtLoginSenha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30sp"
+        android:hint="Senha"
+        android:inputType="textPersonName"
+        android:drawableEnd="@drawable/senha"
+        android:textColorHint="#fff"
+        android:padding="20sp"/>
+    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:hint="Esqueceu a senha ?"
+        android:textColorHint="#fff"
+        android:layout_marginHorizontal="130dp"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sign Up"
+        android:backgroundTint="#CD3755"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="180dp"
+
+
+
 
 
 
