--- a/app/src/main/res/layout/activity_main_dois.xml
+++ b/app/src/main/res/layout/activity_main_dois.xml
@@ -53,17 +53,7 @@
         android:text="Sign Up"
         android:backgroundTint="#CD3755"
         android:paddingBottom="10dp"
-        android:layout_marginTop="180dp"
-
-
-
-
-
-
-
-
-
-
+        android:layout_marginTop="180dp"/>
 
 
 </LinearLayout>
