--- a/app/src/main/res/layout/activity_main_dois.xml
+++ b/app/src/main/res/layout/activity_main_dois.xml
@@ -47,13 +47,18 @@
         android:layout_marginHorizontal="130dp"
         />
 
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:text="Sign Up"
         android:backgroundTint="#CD3755"
-        android:paddingBottom="10dp"
-        android:layout_marginTop="180dp"/>
+        android:layout_marginTop="145dp"/>
+    </LinearLayout>
 
 
 </LinearLayout>
